--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
 
             <TextView
                 style="@style/question_style"
-                android:text="@string/question_1"/>
+                android:text="@string/question_1" />
 
             <RadioGroup
                 android:id="@+id/question_1_radio_group"
@@ -27,61 +27,55 @@
 
                 <RadioButton
                     android:id="@+id/question_1_first_logo_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
 
                 <RadioButton
                     android:id="@+id/question_1_second_logo_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
 
                 <RadioButton
                     android:id="@+id/question_1_third_logo_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
             </RadioGroup>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_1_first_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/blackberry_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/blackberry_logo" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_1_second_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
+                        android:contentDescription="@string/app_name"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/android_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:src="@drawable/android_logo" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_1_third_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/lulu_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/lulu_logo" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -90,9 +84,10 @@
         <LinearLayout
             android:id="@+id/question_2_container"
             style="@style/question_container_style">
+
             <TextView
                 style="@style/question_style"
-                android:text="@string/question_2"/>
+                android:text="@string/question_2" />
 
             <RadioGroup
                 android:id="@+id/question_2_radio_group"
@@ -102,60 +97,55 @@
 
                 <RadioButton
                     android:id="@+id/question_2_first_logo_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
 
                 <RadioButton
                     android:id="@+id/question_2_second_logo_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
 
                 <RadioButton
                     android:id="@+id/question_2_third_logo_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
 
             </RadioGroup>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_2_first_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/flipkart_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/flipkart_logo" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_2_second_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/starbucks_logo_2"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/starbucks_logo_2" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_2_third_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/starbucks_logo_3"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/starbucks_logo_3" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -168,64 +158,58 @@
 
             <TextView
                 style="@style/question_style"
-                android:text="@string/question_3"/>
+                android:text="@string/question_3" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    style="@style/checkbox_group_layout_style">
+                <LinearLayout style="@style/checkbox_group_layout_style">
 
                     <CheckBox
                         android:id="@+id/question_3_first_checkbox"
-                        android:text=""
                         style="@style/question_checkbox_style"
-                        />
+                        android:text="" />
 
                     <ImageView
                         android:id="@+id/question_3_first_checkbox_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/netflix_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/netflix_logo" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    style="@style/checkbox_group_layout_style">
+                <LinearLayout style="@style/checkbox_group_layout_style">
 
                     <CheckBox
                         android:id="@+id/question_3_second_checkbox"
-                        android:text=""
                         style="@style/question_checkbox_style"
-                        />
+                        android:text="" />
 
                     <ImageView
                         android:id="@+id/question_3_second_checkbox_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/amazon_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/amazon_logo" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    style="@style/checkbox_group_layout_style">
+                <LinearLayout style="@style/checkbox_group_layout_style">
 
                     <CheckBox
                         android:id="@+id/question_3_third_checkbox"
-                        android:text=""
                         style="@style/question_checkbox_style"
-                        />
+                        android:text="" />
 
                     <ImageView
                         android:id="@+id/question_3_third_checkbox_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/bing_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/bing_logo" />
 
                 </LinearLayout>
 
@@ -237,16 +221,17 @@
         <LinearLayout
             android:id="@+id/question_4_container"
             style="@style/question_container_style">
+
             <TextView
                 style="@style/question_style"
-                android:text="@string/question_4"/>
+                android:text="@string/question_4" />
 
             <ImageView
                 android:id="@+id/question_4_logo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/flipkart_logo"
-                android:contentDescription="@string/app_name" />
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/flipkart_logo" />
 
             <EditText
                 android:id="@+id/question_4_edit_text"
@@ -263,7 +248,7 @@
 
             <TextView
                 style="@style/question_style"
-                android:text="@string/question_5"/>
+                android:text="@string/question_5" />
 
             <RadioGroup
                 android:id="@+id/question_5_radio_group"
@@ -273,60 +258,55 @@
 
                 <RadioButton
                     android:id="@+id/question_5_first_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
 
                 <RadioButton
                     android:id="@+id/question_5_second_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
 
                 <RadioButton
                     android:id="@+id/question_5_third_radio"
-                    android:text=""
                     style="@style/question_radio_button_style"
-                    />
+                    android:text="" />
 
             </RadioGroup>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_5_first_radio_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/pepsi_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/pepsi_logo" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_5_second_radio_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/dominos_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/dominos_logo" />
 
                 </LinearLayout>
 
-                <LinearLayout
-                    style="@style/radio_group_linear_layout_style">
+                <LinearLayout style="@style/radio_group_linear_layout_style">
 
                     <ImageView
                         android:id="@+id/question_5_third_radio_logo"
                         android:layout_width="match_parent"
                         android:layout_height="80dp"
-                        android:src="@drawable/uber_logo"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        android:src="@drawable/uber_logo" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -339,43 +319,44 @@
 
             <TextView
                 style="@style/question_style"
-                android:text="@string/question_6"/>
+                android:text="@string/question_6" />
 
             <ImageView
                 android:id="@+id/question_6_logo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/old_apple_logo"
-                android:contentDescription="@string/app_name"  />
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/old_apple_logo" />
 
             <EditText
                 android:id="@+id/question_6_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_your_response_here"
-                android:inputType="text"/>
+                android:inputType="text" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/question_7_container"
             style="@style/question_container_style">
+
             <TextView
                 style="@style/question_style"
-                android:text="@string/question_7"/>
+                android:text="@string/question_7" />
 
             <ImageView
                 android:id="@+id/question_7_logo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/udacity_logo"
-                android:contentDescription="@string/app_name"  />
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/udacity_logo" />
 
             <EditText
                 android:id="@+id/question_7_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:hint="@string/enter_your_response_here"/>
+                android:hint="@string/enter_your_response_here"
+                android:inputType="text" />
         </LinearLayout>
 
         <Button
@@ -383,7 +364,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            android:text="@string/submit"
-            android:onClick="checkQuiz"/>
+            android:onClick="checkQuiz"
+            android:text="@string/submit" />
     </LinearLayout>
 </ScrollView>
